@@ -1,3 +1,11 @@
+2013-01-07 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* src/Utils.cxx: Util::GetComponent takes extra boolean parameter; if set
+	to true, will not search for short region names but assumes the given name
+	is the full one
+	* scripts/YieldsTableTex.py: no longer check "if sample in name", but
+	rather exact match -> issues with channels such as "ttbar" and "ttbarV"
+	resolved (only one of them shows up otherwise)
+
 2012-12-21 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* src/toy_utils.cxx: memory leak (fitresult not deleted) fixed
 	* src/CombineWorkSpaces.cxx: memory leak (intermediate hypotest and
